# numerical-linear-algebra

./: pyproject.toml
nbs/: 0. Course Logistics.ipynb
